# DM_Voice

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
.github/scripts/: release-notes.sh
.github/workflows/: release.yml  token-test.yml
.local/: downloads-baseline-2026-05-15-morning.json
.superpowers/brainstorm/75573-1778281115/content/: overlay-position.html  settings-access.html
.superpowers/brainstorm/75573-1778281115/state/: events  server-stopped
docs/superpowers/notes/: 2026-06-02-oww-rs-integration-notes.md
docs/superpowers/plans/: 2026-05-09-dm-voice.md
docs/superpowers/specs/: 2026-05-09-speech-to-text-design.md
src-tauri/: Assets.car  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: wake_spike.rs
src-tauri/icons/: icon.icns  make-win-icon.mjs
src-tauri/src/: audio.rs  config.rs  dlog.rs  injector.rs  limits.rs  listener.rs  main.rs  models.rs  permissions.rs  shortcut.rs  sounds.rs  stats.rs  symbols.rs  transcriber.rs  updater.rs  vad.rs  wake_word.rs
src/i18n/: en.json  i18n.js
src/overlay/: index.html  waveform.js
src/settings/: index.html  settings.js
src/shared/: dm-tokens.css
