[package]
name = "dm-voice"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
whisper-rs = { version = "0.11", features = ["metal"] }
cpal = "0.15"
rubato = "0.15"
arboard = "3"
enigo = { version = "0.2", features = [] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
