[package]
name = "dm-voice"
version = "0.3.5"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["DM Apps"]
description = "Push-to-Talk Speech-to-Text for macOS, powered by Whisper"
repository = "https://github.com/m0nji/DM_Voice"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
cpal = "0.15"
rubato = "0.15"
arboard = "3"
enigo = { version = "0.2", features = [] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
serde_json = "1"

# whisper-rs: GPU-Backend ist plattformspezifisch.
#   macOS  → Metal (Apple Silicon).
#   Windows → Vulkan (deckt NVIDIA, AMD, Intel Arc/Xe in einer Binary ab).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
