[package]
name = "dm-voice"
version = "0.5.16"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["DM Apps"]
description = "Push-to-Talk Speech-to-Text for macOS, powered by Whisper"
repository = "https://github.com/m0nji/DM_Voice"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
rubato = "0.15"
arboard = "3"
enigo = { version = "0.2", features = [] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
# SPIKE (feature/wake-word-handsfree): vendored openWakeWord inference.
# default-features = false drops the crate's `mic` feature (cpal 0.17 / rubato 2.0)
# so the app keeps linking only its own cpal 0.15 / rubato 0.15.
oww-rs = { path = "vendor/oww-rs", default-features = false }

# whisper-rs: GPU-Backend ist plattformspezifisch.
#   macOS  → Metal (Apple Silicon).
#   Windows → Vulkan (deckt NVIDIA, AMD, Intel Arc/Xe in einer Binary ab).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# Vendored cpal 0.15.3 with a one-line fix to its macOS CoreAudio backend.
# Upstream registers a device-disconnect listener for non-default input devices
# whose closure captures a strong clone of the Stream and stores it inside the
# Stream's own Arc → reference cycle → the AudioUnit is never disposed on drop →
# the orange mic indicator stays lit after recording (only for user-selected,
# non-default devices). The patch holds a Weak ref instead. See
# vendor/cpal/src/host/coreaudio/macos/mod.rs (search "DM-Voice patch").
[patch.crates-io]
cpal = { path = "vendor/cpal" }

[dev-dependencies]
tempfile = "3"
# SPIKE-only: used by examples/wake_spike.rs to read WAV + init logging.
hound = "3.5"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
# Thin LTO + parallel codegen units instead of fat-LTO/cgu=1: cuts CI build
# time substantially (esp. the tract ONNX deps on Windows/MSVC) with no
# meaningful runtime impact — hot paths are whisper.cpp (Metal/Vulkan) and
# tract, both dominated by their own kernels, not Rust cross-crate inlining.
lto = "thin"
codegen-units = 16
